| Summary: | ASTERISK-25558: [patch]chan_sip option 'notifyringing' doc fix and addition of 'notifyringingprio' | ||
| Reporter: | Ward van Wanrooij (wardvanwanrooij) | Labels: | |
| Date Opened: | 2015-11-14 17:17:08.000-0600 | Date Closed: | 2016-01-21 15:46:38.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Subscriptions |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In the sample sip.conf this is written with regard to notifyringing:
;notifyringing = no ; Control whether subscriptions already INUSE get sent RINGING when another call is sent (default: yes) However, this setting changes whether or not any RINGING indications are sent to subscriptions. There is no separate configurable setting that allows to control whether INUSE subscriptions also get sent RINGING. This is however a useful option, to see (using BLF) if somebody else is able to handle an incoming call or if everybody is busy. A patch is forthcoming that corrects the documentation for notifyringing (so the documentation matches the functionality) and add a new setting notifyringingprio that add the functionality that is currently in the documentation for notifyringing. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-11-14 17:17:09.201-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Ward van Wanrooij (wardvanwanrooij) 2015-12-26 09:44:42.018-0600 Changed approach, dropped new option "notifyringingprio", changed option "notifyringing" to tri-state. More details on reviewboard. By: Richard Mudgett (rmudgett) 2016-01-21 15:46:38.420-0600 Closing issue because patch merged to branch. This wasn't auto closed because the commit message did not say to close it by including the following line: ASTERISK-25558 #close | ||